--- a/LighthouseExample/LighthouseExample/LighthouseExample-Info.plist
+++ b/LighthouseExample/LighthouseExample/LighthouseExample-Info.plist
@@ -39,6 +39,8 @@
 		<string>location</string>
 		<string>bluetooth-central</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need to scan beacons in background. You can customise this message in the Info plist.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
